--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+/__pycache__/
 
 # C extensions
 *.so
@@ -162,4 +163,5 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+app/__pycache__/__init__.cpython-311.pyc
 app/__pycache__/__init__.cpython-311.pyc
